--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -28,16 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -121,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "# optional: register additional columns we'd like to curate\n",
+    "# optional: register additional columns we would like to curate\n",
     "curate.add_new_from_columns(modality=\"rna\")\n",
     "curate.add_new_from_columns(modality=\"adt\")\n",
     "curate.add_new_from_columns(modality=\"hto\")\n",
