--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -115,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "blobs_af = ln.Artifact.from_spatialdata(example_blobs_sdata, key=\"example_blobs.zarr\")\n",
@@ -213,8 +217,8 @@
    "outputs": [],
    "source": [
     "# define sample schema\n",
-    "sample_schema = ln.Schema(\n",
-    "    name=\"SpatialData sample level\",\n",
+    "xenium_sample_schema = ln.Schema(\n",
+    "    name=\"Xenium sample level\",\n",
     "    features=[\n",
     "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
     "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
@@ -227,7 +231,7 @@
     "\n",
     "# define table obs schema\n",
     "xenium_obs_schema = ln.Schema(\n",
-    "    name=\"Xenium SpatialData obs level\",\n",
+    "    name=\"Xenium obs level\",\n",
     "    features=[\n",
     "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType).save(),\n",
     "    ],\n",
@@ -235,18 +239,18 @@
     ").save()\n",
     "\n",
     "# define table var schema\n",
-    "xenium_var_schema = ln.Schema(\n",
-    "    name=\"Xenium SpatialData var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    "spatial_var_schema = ln.Schema(\n",
+    "    name=\"Xenium var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
     ").save()\n",
     "\n",
     "# define composite schema\n",
-    "spatialdata_schema = ln.Schema(\n",
-    "    name=\"SpatialData Xenium schema\",\n",
+    "xenium_schema = ln.Schema(\n",
+    "    name=\"Xenium schema\",\n",
     "    otype=\"SpatialData\",\n",
     "    components={\n",
-    "        \"sample\": sample_schema,\n",
+    "        \"sample\": xenium_sample_schema,\n",
     "        \"table:obs\": xenium_obs_schema,\n",
-    "        \"table:var\": xenium_var_schema,\n",
+    "        \"table:var\": spatial_var_schema,\n",
     "    },\n",
     ").save()"
    ]
@@ -261,9 +265,9 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatialdata_schema)\n",
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, xenium_schema)\n",
     "try:\n",
-    "    curator.validate()\n",
+    "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
     "    print(e)"
    ]
@@ -278,7 +282,7 @@
    },
    "outputs": [],
    "source": [
-    "curator.slots[\"sample\"].cat.add_new_from(\"panel\")"
+    "xenium_curator.slots[\"sample\"].cat.add_new_from(\"panel\")"
    ]
   },
   {
@@ -292,7 +296,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    curator.validate()\n",
+    "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
     "    print(e)"
    ]
@@ -337,7 +341,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    curator.validate()\n",
+    "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
     "    print(e)"
    ]
@@ -348,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
+    "xenium_curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
    ]
   },
   {
@@ -361,8 +365,80 @@
    },
    "outputs": [],
    "source": [
+    "xenium_1_curated_af = xenium_curator.save_artifact(key=\"xenium1.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenium_1_curated_af.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a Collection of curated SpatialData datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can reuse the same curator for a second Xenium dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_aligned_2_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_2_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "\n",
+    "xenium_aligned_2_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_2_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, xenium_schema)\n",
     "try:\n",
-    "    curator.validate()\n",
+    "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
     "    print(e)"
    ]
@@ -370,14 +446,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = curator.save_artifact(key=\"example_datasets/spatialdata1.zarr\")"
+    "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analogously, we can define a Schema and Curator for Visium datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_sample_schema = ln.Schema(\n",
+    "    name=\"Visium sample level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
+    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
+    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
+    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "visium_schema = ln.Schema(\n",
+    "    name=\"Visium schema\",\n",
+    "    otype=\"SpatialData\",\n",
+    "    components={\n",
+    "        \"sample\": visium_sample_schema,\n",
+    "        \"table:var\": spatial_var_schema,\n",
+    "    },\n",
+    ").save()"
    ]
   },
   {
@@ -390,7 +496,60 @@
    },
    "outputs": [],
    "source": [
-    "artifact.describe()"
+    "visium_aligned_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "visium_aligned_sdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, visium_schema)\n",
+    "try:\n",
+    "    visium_curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spatial_collection = ln.Collection(\n",
+    "    [xenium_1_curated_af, xenium_2_curated_af, visium_curated_af],\n",
+    "    key=\"spatial_collection\",\n",
+    ").save()\n",
+    "spatial_collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   }
  ],
