--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -15,17 +15,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
-    "!lamin init --storage ./test-spatial --schema bionty"
+    "1. Curate more data and query it\n",
+    "2. Maybe some dummy plots and analysis and point to other stuff"
    ]
   },
   {
@@ -45,6 +39,13 @@
     "\n",
     "ln.track()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
