--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-imaging --modules bionty"
+    "!lamin init --storage ./test-sc-imaging --modules bionty"
    ]
   },
   {
