--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -167,11 +167,11 @@
     "    ),\n",
     "    \"phenotype\": pd.Categorical(\n",
     "        [\n",
-    "            \"decreased weight\",\n",
-    "            \"increased size\",\n",
-    "            \"bent\",\n",
-    "            \"not symmetrical\",\n",
-    "            \"mislocalised\",\n",
+    "            \"Meningitis\",\n",
+    "            \"Elevated urinary bile acid level\",\n",
+    "            \"Reduced breast milk zinc concentration\",\n",
+    "            \"Autosomal dominant inheritance\",\n",
+    "            \"Areflexia\",\n",
     "        ]\n",
     "    ),\n",
     "    \"developmental_stage\": pd.Categorical(\n",
@@ -250,7 +250,7 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\"1 term is not validated: 'not symmetrical'\")\n",
+    "    assert str(e).startswith(\"1 term is not validated: 'Autosomal inheritance'\")\n",
     "    print(e)"
    ]
   },
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "diseases = bt.Disease.public().lookup()\n",
-    "phenotypes = bt.Phenotype.public().lookup()\n",
+    "phenotypes = bt.Phenotype.public(organism=\"human\").lookup()\n",
     "developmental_stages = bt.DevelopmentalStage.public().lookup()\n",
     "\n",
     "df[\"disease\"] = df[\"disease\"].cat.rename_categories(\n",
@@ -296,7 +296,7 @@
     ")\n",
     "df[\"phenotype\"] = df[\"phenotype\"].cat.rename_categories(\n",
     "    {\n",
-    "        \"not symmetrical\": phenotypes.asymmetrical.name,\n",
+    "        \"Autosomal inheritance\": phenotypes.autosomal_dominant_inheritance.name,\n",
     "    }\n",
     ")\n",
     "df[\"developmental_stage\"] = df[\"developmental_stage\"].cat.rename_categories(\n",
