--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -69,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
     "disease_ontology = bt.Source.get(\n",
     "    entity=\"bionty.Disease\", name=\"mondo\", version=\"2023-04-04\"\n",
     ")\n",
@@ -78,7 +79,7 @@
     "phenotype_ontology = bt.Source.get(\n",
     "    entity=\"bionty.Phenotype\",\n",
     "    name=\"hp\",\n",
-    "    version=\"2024-04-26\",\n",
+    "    version=\"2023-06-17\",\n",
     "    organism=\"human\",\n",
     ")"
    ]
@@ -167,11 +168,11 @@
     "    ),\n",
     "    \"phenotype\": pd.Categorical(\n",
     "        [\n",
-    "            \"Meningitis\",\n",
-    "            \"Elevated urinary bile acid level\",\n",
-    "            \"Reduced breast milk zinc concentration\",\n",
-    "            \"Autosomal dominant inheritance\",\n",
-    "            \"Areflexia\",\n",
+    "            \"Mental deterioration\",\n",
+    "            \"Hyperglycemia\",\n",
+    "            \"Tumor growth\",\n",
+    "            \"Increased blood pressure\",\n",
+    "            \"Airway inflammation\",\n",
     "        ]\n",
     "    ),\n",
     "    \"developmental_stage\": pd.Categorical(\n",
@@ -250,7 +251,9 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\"1 term is not validated: 'Autosomal inheritance'\")\n",
+    "    assert str(e).startswith(\n",
+    "        \"2 terms are not validated: 'Tumor growth', 'Airway inflammation'\"\n",
+    "    )\n",
     "    print(e)"
    ]
   },
@@ -288,7 +291,7 @@
    "outputs": [],
    "source": [
     "diseases = bt.Disease.public().lookup()\n",
-    "phenotypes = bt.Phenotype.public(organism=\"human\").lookup()\n",
+    "phenotypes = bt.Phenotype.public().lookup()\n",
     "developmental_stages = bt.DevelopmentalStage.public().lookup()\n",
     "\n",
     "df[\"disease\"] = df[\"disease\"].cat.rename_categories(\n",
@@ -296,7 +299,8 @@
     ")\n",
     "df[\"phenotype\"] = df[\"phenotype\"].cat.rename_categories(\n",
     "    {\n",
-    "        \"Autosomal inheritance\": phenotypes.autosomal_dominant_inheritance.name,\n",
+    "        \"Tumor growth\": phenotypes.neoplasm.name,\n",
+    "        \"Airway inflammation\": phenotypes.bronchitis.name,\n",
     "    }\n",
     ")\n",
     "df[\"developmental_stage\"] = df[\"developmental_stage\"].cat.rename_categories(\n",
