--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -24,19 +24,19 @@
    "source": [
     "Here, you will learn how to structure, featurize, and make a large imaging collection queryable for large-scale machine learning:\n",
     "\n",
-    "1. Load and annotate a {class}`~lamindb.Collection` of microscopy images (![imaging/4](https://img.shields.io/badge/imaging1/4-lightgrey))\n",
-    "2. Generate single-cell images ([![imaging2/4](https://img.shields.io/badge/imaging2/4-lightgrey)](/imaging4))\n",
-    "3. Featurize single-cell images ([![imaging3/4](https://img.shields.io/badge/imaging3/6-lightgrey)](/imaging4))\n",
-    "4. Train model to identify autophagy positive cells ([![imaging4/4](https://img.shields.io/badge/imaging4/4-lightgrey)](/imaging4))\n",
+    "1. Load and annotate a {class}`~lamindb.Collection` of microscopy images (![sc-imaging/4](https://img.shields.io/badge/imaging1/4-lightgrey))\n",
+    "2. Generate single-cell images ([![sc-imaging2/4](https://img.shields.io/badge/imaging2/4-lightgrey)](/sc-imaging4))\n",
+    "3. Featurize single-cell images ([![sc-imaging3/4](https://img.shields.io/badge/imaging3/6-lightgrey)](/sc-imaging4))\n",
+    "4. Train model to identify autophagy positive cells ([![sc-imaging4/4](https://img.shields.io/badge/imaging4/4-lightgrey)](/sc-imaging4))\n",
     "\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
     ":hidden:\n",
     "\n",
-    "imaging2\n",
-    "imaging3\n",
-    "imaging4\n",
+    "sc-imaging2\n",
+    "sc-imaging3\n",
+    "sc-imaging4\n",
     "```"
    ]
   },
