--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -54,6 +54,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{note}\n",
+    "\n",
+    "When we mention spatial data, we refer to data from spatial assays, such as spatial transcriptomics or proteomics, that includes spatial coordinates to represent the organization of molecular features in tissue.\n",
+    "When we refer SpatialData, we mean spatial omics data stored in the scverse SpatialData framework.\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -75,8 +87,6 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "import pandas as pd\n",
-    "import spatialdata_plot\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
