--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -43,6 +43,7 @@
     "import bionty as bt\n",
     "import numpy as np\n",
     "\n",
+    "import spatialdata as sd\n",
     "from spatialdata import transform\n",
     "from spatialdata.dataloader.datasets import ImageTilesDataset\n",
     "\n",
@@ -61,8 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Visium and Xenium datasets.\n",
-    "TODO"
+    "First, we query for Visium and Xenium datasets and create a merged dataset:"
    ]
   },
   {
@@ -71,8 +71,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = (\n",
-    "    ln.Artifact.using(\"laminlabs/lamindata\").get(key=\"merged_guide_min.zarr\").load()\n",
+    "xenium_1_sd = ln.Artifact.filter(key=\"xenium_aligned_1_guide_min.zarr\").one().load()\n",
+    "visium_sd = ln.Artifact.filter(key=\"visium_aligned_guide_min.zarr\").one().load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_sd = sd.SpatialData(\n",
+    "    images={\n",
+    "        \"CytAssist_FFPE_Human_Breast_Cancer_full_image\": visium_sd.images[\n",
+    "            \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"\n",
+    "        ],\n",
+    "    },\n",
+    "    shapes={\n",
+    "        \"cell_circles\": xenium_1_sd.shapes[\"cell_circles\"],\n",
+    "        \"cell_boundaries\": xenium_1_sd.shapes[\"cell_boundaries\"],\n",
+    "    },\n",
+    "    tables={\"table\": xenium_1_sd[\"table\"]},\n",
     ")"
    ]
   },
@@ -124,12 +143,14 @@
     "from spatial_ml import tile_transform, TilesDataModule, DenseNetModel\n",
     "\n",
     "dataset = ImageTilesDataset(\n",
-    "    sdata=merged,\n",
+    "    sdata=merged_sd,\n",
     "    regions_to_images={\"cell_circles\": \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"},\n",
     "    regions_to_coordinate_systems={\"cell_circles\": \"aligned\"},\n",
     "    table_name=\"table\",\n",
     "    tile_dim_in_units=6\n",
-    "    * np.mean(transform(merged[\"cell_circles\"], to_coordinate_system=\"aligned\").radius),\n",
+    "    * np.mean(\n",
+    "        transform(merged_sd[\"cell_circles\"], to_coordinate_system=\"aligned\").radius\n",
+    "    ),\n",
     "    transform=tile_transform,\n",
     "    rasterize=True,\n",
     "    rasterize_kwargs={\"target_width\": 32},\n",
@@ -165,7 +186,7 @@
     "model = DenseNetModel(\n",
     "    learning_rate=1e-5,\n",
     "    in_channels=dataset[0][0].shape[0],\n",
-    "    num_classes=len(merged[\"table\"].obs[\"celltype_major\"].cat.categories.tolist()),\n",
+    "    num_classes=len(merged_sd[\"table\"].obs[\"celltype_major\"].cat.categories.tolist()),\n",
     ")\n",
     "\n",
     "trainer = pl.Trainer(\n",
@@ -196,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we were to perform a prediction and evaluate it, we would see predictions like:"
+    "If we were to perform a prediction and evaluate it like outlined in the [original guide](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html), we would see predictions like:"
    ]
   },
   {
