--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -50,7 +50,23 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt"
+    "import bionty as bt\n",
+    "\n",
+    "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating MuData Artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lamindb provides a {meth}`~lamindb.Artifact.from_mudata` method to create {class}`~lamindb.Artifact` from MuData objects."
    ]
   },
   {
@@ -68,10 +84,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "mdata_af = ln.Artifact.from_spatialdata(mdata, key=\"papalexi.h5mu\")\n",
+    "mdata_af"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# MuData Artifacts have the corresponding otype\n",
+    "mdata_af.otype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# MuData Artifacts can easily be loaded back into memory\n",
+    "papalexi_in_memory = mdata_af.load()\n",
+    "papalexi_in_memory"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate annotations "
+    "## Validate MuData annotations"
    ]
   },
   {
@@ -168,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register curated artifact"
+    "## Register curated Artifact"
    ]
   },
   {
@@ -195,6 +254,19 @@
    "outputs": [],
    "source": [
     "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   },
   {
