--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curating SpatialData datasets"
+    "## Validate SpatialData annotations"
    ]
   },
   {
@@ -366,6 +366,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register curated Artifact"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -391,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a Collection of curated SpatialData datasets"
+    "## Create a Collection of curated SpatialData datasets"
    ]
   },
   {
