--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Querying a SpatialData Collection"
+    "## Query a SpatialData Collection"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyzing spatial data"
+    "## Analyze spatial data"
    ]
   },
   {
