--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -93,7 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "mdata_af = ln.Artifact.from_spatialdata(mdata, key=\"papalexi.h5mu\")\n",
+    "mdata_af = ln.Artifact.from_mudata(mdata, key=\"papalexi.h5mu\")\n",
     "mdata_af"
    ]
   },
