--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -120,11 +120,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "````{dropdown}\n",
     "```{eval-rst}\n",
-    "    literalinclude:: spatial_ml.py\n",
-    "    :language: python\n",
-    "    :caption: Spatial cell type classification model definition\n",
-    "```"
+    ".. literalinclude:: spatial_ml.py\n",
+    "   :language: python\n",
+    "   :caption: Spatial cell type classification model definition\n",
+    "```\n",
+    "````"
    ]
   },
   {
@@ -225,7 +227,7 @@
     ]
    },
    "source": [
-    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_predicted.png\" width=\"1000\" height=\"500\" alt=\"Model predictions\">"
+    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_predicted.png\" width=\"1000\" height=\"450\" alt=\"Model predictions\">"
    ]
   }
  ],
