--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "````{dropdown}\n",
+    "````{dropdown} Code of tile_transform, ImageTilesDataset and the DenseNetModel\n",
     "```{eval-rst}\n",
     ".. literalinclude:: spatial_ml.py\n",
     "   :language: python\n",
