--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -15,48 +15,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
-    "!lamin init --storage ./test-spatial --schema bionty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import pandas as pd\n",
-    "import spatialdata_plot\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "ln.track()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# talk to Tim & Lea to get latest viz\n",
-    "# talk to Mark to get a nice viz"
+    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).\n",
+    "Please refer to our SpatialData [Vitessce guide](/vitessce#visualize-a-spatialdata-object-zarr-format)."
    ]
   },
   {
