🎨 Fix vitessce link
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).\n",
-    "Please refer to our SpatialData [Vitessce guide](/vitessce.ipynb#visualize-a-spatialdata-object-zarr-format)."
+    "Please refer to our SpatialData Vitessce guide :doc:`docs:vitessce`"
    ]
   },
   {
