--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).\n",
-    "Please refer to our SpatialData Vitessce guide {doc}`docs:vitessce`"
+    "Please refer to our SpatialData {doc}`docs:vitessce` guide to learn how to create Vitessce configs for SpatialData objects."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
