--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-plot]\n",
+    "# !pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
     "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
@@ -463,7 +463,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
@@ -479,7 +483,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "visium_sample_schema = ln.Schema(\n",
@@ -524,7 +532,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, visium_schema)\n",
@@ -537,7 +549,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
@@ -546,7 +562,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "spatial_collection = ln.Collection(\n",
