--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -227,14 +227,13 @@
    "outputs": [],
    "source": [
     "# define sample schema\n",
-    "xenium_sample_schema = ln.Schema(\n",
+    "spatial_sample_schema = ln.Schema(\n",
     "    name=\"Xenium sample level\",\n",
     "    features=[\n",
     "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
     "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
     "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
     "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
-    "        ln.Feature(name=\"panel\", dtype=\"cat[ULabel]\").save(),\n",
     "    ],\n",
     "    coerce_dtype=True,\n",
     ").save()\n",
@@ -258,7 +257,7 @@
     "    name=\"Xenium schema\",\n",
     "    otype=\"SpatialData\",\n",
     "    components={\n",
-    "        \"sample\": xenium_sample_schema,\n",
+    "        \"sample\": spatial_sample_schema,\n",
     "        \"table:obs\": xenium_obs_schema,\n",
     "        \"table:var\": spatial_var_schema,\n",
     "    },\n",
@@ -490,22 +489,11 @@
    },
    "outputs": [],
    "source": [
-    "visium_sample_schema = ln.Schema(\n",
-    "    name=\"Visium sample level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
-    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
-    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
-    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
-    ").save()\n",
-    "\n",
     "visium_schema = ln.Schema(\n",
     "    name=\"Visium schema\",\n",
     "    otype=\"SpatialData\",\n",
     "    components={\n",
-    "        \"sample\": visium_sample_schema,\n",
+    "        \"sample\": spatial_sample_schema,\n",
     "        \"table:var\": spatial_var_schema,\n",
     "    },\n",
     ").save()"
