--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -61,7 +61,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Visium and Xenium datasets and create a merged dataset:"
+    "First, we query for Visium and Xenium datasets and create a merged dataset.\n",
+    "They are a part of our collection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.Collection.get(key=\"spatial_collection\").artifacts.df()"
    ]
   },
   {
