--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -358,7 +358,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "xenium_1_curated_af.describe()"
@@ -369,6 +373,13 @@
    "metadata": {},
    "source": [
     "## Create a Collection of curated SpatialData datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curate additional Xenium datasets"
    ]
   },
   {
@@ -441,6 +452,13 @@
    "outputs": [],
    "source": [
     "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curate Visium datasets"
    ]
   },
   {
